# image_walker

./: CacheClean.sh  README.md  README_EN.md
ImageWalker/: README.md  README_EN.md  pyproject.toml
ImageWalker/docs/source/: conf.py  index.rst
ImageWalker/docs/source/_static/: custom.css
ImageWalker/docs/source/_templates/: custom-module-template.rst
ImageWalker/docs/source/modules/: core.rst  plugins.rst  services.rst  utils.rst
ImageWalker/imagewalker/: main.py
ImageWalker/imagewalker/domain/: file_system_domain.py  files_metadata.py
ImageWalker/imagewalker/filters/: filters.py  implementation.py  registry.py
ImageWalker/imagewalker/plugins/: auto_loader.py  base.py  connector.py  interface.py  registry.py
ImageWalker/imagewalker/plugins/custom_filters/: best_model.pth  custom_size_plugin.py  date_range_plugin.py  file_type_plugin.py  neural_classifier_plugin.py
ImageWalker/imagewalker/providers/: walker_service_provider.py
ImageWalker/imagewalker/repository/: walker_repo.py  walker_repo_interface.py
ImageWalker/imagewalker/services/: file_operations_service.py  stats_service.py  walker_service.py
ImageWalker/imagewalker/utils/: print_objective_tree.py
