[project]
name = "imagewalker"
version = "0.1.0"
description = ""
authors = [{ name = "Delman Delshi", email = "ddelshi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow (>=12.0.0,<13.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "moviepy (==1.0.3)",
    "mutagen (>=1.47.0,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "sphinx-autodoc-typehints (>=3.5.2,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
